core/tests/snapshots/snapshots__bare_test@log.snap
---
source: core/tests/snapshots.rs
expression: output
---
#[::core::prelude::v1::test]
fn it_works() {
  {
    mod init {
      pub fn init() {
        {
          let _result = ::test_log::env_logger::builder()
            .parse_env(
              ::test_log::env_logger::Env::default()
                .default_filter_or("info"),
            )
            .target(::test_log::env_logger::Target::Stderr)
            .is_test(true)
            .try_init();
        }
      }
    }
    init::init();
  }
  assert_eq!(2 + 2, 4);
}
