core/tests/snapshots/snapshots__default_log_filter@log.snap
---
source: core/tests/snapshots.rs
expression: output
---
#[::core::prelude::v1::test]
fn with_filter() {
  mod init {
    pub fn init() {
      {
        let _result = ::test_log::env_logger::builder()
          .parse_env(
            ::test_log::env_logger::Env::default().default_filter_or("debug"),
          )
          .target(::test_log::env_logger::Target::Stderr)
          .is_test(true)
          .try_init();
      }
    }
  }
  init::init();
  {}
}
