core/tests/snapshots/snapshots__inner_tokio_test@log.snap
---
source: core/tests/snapshots.rs
expression: output
---
#[tokio::test]
async fn with_async() {
  {
    mod init {
      pub fn init() {
        {
          let _result = ::test_log::env_logger::builder()
            .parse_env(
              ::test_log::env_logger::Env::default()
                .default_filter_or("info"),
            )
            .target(::test_log::env_logger::Target::Stderr)
            .is_test(true)
            .try_init();
        }
      }
    }
    init::init();
  }
  assert_eq!(async { 42 } . await, 42);
}
