core/tests/snapshots/snapshots__inner_tokio_test@none.snap
---
source: core/tests/snapshots.rs
expression: output
---
#[tokio::test]
async fn with_async() {
  mod init {
    pub fn init() {}
  }
  init::init();
  assert_eq!(async { 42 } . await, 42);
}
