core/tests/snapshots/snapshots__inner_tokio_test@trace.snap
---
source: core/tests/snapshots.rs
expression: output
---
#[tokio::test]
async fn with_async() {
  {
    mod init {
      pub fn init() {
        {
          let __internal_event_filter = {
            use ::test_log::tracing_subscriber::fmt::format::FmtSpan;
            match ::std::env::var_os("RUST_LOG_SPAN_EVENTS") {
              Some(mut value) => {
                value.make_ascii_lowercase();
                let value = value
                  .to_str()
                  .expect(
                    "test-log: RUST_LOG_SPAN_EVENTS must be valid UTF-8",
                  );
                value
                  .split(",")
                  .map(|filter| match filter.trim() {
                    "new" => FmtSpan::NEW,
                    "enter" => FmtSpan::ENTER,
                    "exit" => FmtSpan::EXIT,
                    "close" => FmtSpan::CLOSE,
                    "active" => FmtSpan::ACTIVE,
                    "full" => FmtSpan::FULL,
                    _ => {
                      panic!(
                        "test-log: RUST_LOG_SPAN_EVENTS must contain filters separated by `,`.\n\t\
         For example: `active` or `new,close`\n\t\
         Supported filters: new, enter, exit, close, active, full\n\t\
         Got: {}",
                        value
                      )
                    }
                  })
                  .fold(FmtSpan::NONE, |acc, filter| filter | acc)
              }
              None => FmtSpan::NONE,
            }
          };
          let _ = ::test_log::tracing_subscriber::FmtSubscriber::builder()
            .with_env_filter(
              ::test_log::tracing_subscriber::EnvFilter::builder()
                .with_default_directive(
                  ::test_log::tracing_subscriber::filter::LevelFilter::INFO
                    .into(),
                )
                .from_env_lossy(),
            )
            .with_span_events(__internal_event_filter)
            .with_writer(
              ::test_log::tracing_subscriber::fmt::TestWriter::with_stderr,
            )
            .try_init();
        }
      }
    }
    init::init();
  }
  assert_eq!(async { 42 } . await, 42);
}
